--- a/index.html
+++ b/index.html
@@ -1,187 +1,110 @@
 
-<html>
-
-<head>
-<meta http-equiv="Content-Language" content="zh-cn">
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>Yi-Heng Zhu</title>
-<style>
-<!--
- li.MsoNormal
-	{mso-style-parent:"";
-	margin-bottom:.0001pt;
-	text-align:justify;
-	text-justify:inter-ideograph;
-	font-size:10.5pt;
-	font-family:"Times New Roman";
-	margin-left:0cm; margin-right:0cm; margin-top:0cm}
--->
-</style>
-</head>
-
-<body>
-
-<div align="center">
-
-<table border="0" width="900" id="table1" bgcolor="#FFFFFF">
-	<tr>
-		<td width="125" valign="top" rowspan="6" align="left">
-		<font size="2">
-		<img border="0" src="./me.jpg" width="157" height="191"></font></td>
-		<td width="162" valign="bottom"><b><a name="Yi-Heng_Zhu">
-		<font face="Georgia">Yi-Heng Zhu</font></a></b></td>
-		<td valign="bottom" width="655"><font face="Georgia">Ph.D Student
-		</font></td>
-	</tr>
-	<tr>
-		<td width="162" valign="top"><font face="Georgia">Correspondence</font></td>
-		<td width="655" valign="top"><font face="Georgia">School of Computer Science and Engineering, Nanjing University of Science and Technology, 200 Xiaolingwei, Nanjing, 210094, China</font></td>
-	</tr>
-	<tr>
-		<td width="162" valign="bottom"><font face="Georgia">Email</font></td>
-		<td valign="bottom" width="655"><font face="Georgia"><a href="mailto:yihzhu@umich.edu">
-		yihzhu@umich.edu</a> or <a href="mailto:zhy930505@njust.edu.cn">
-		zhy930505@njust.edu.cn</a> </font></td>
-	</tr>
-	<tr>
-		<td width="162" valign="bottom"><font face="Georgia">ResearchGate</font></td>
-		<td valign="bottom" width="655"><font face="Georgia"><a href="https://www.researchgate.net/profile/Zhu_Yi-Heng" target=_blank>
-		https://www.researchgate.net/profile/Zhu_Yi-Heng</a> </font></td>
-	</tr>
-	<tr>
-		<td width="143">
-		</td>
-		<td width="517">
-		</td>
-	</tr>
-	<tr>
-		<td></td>
-	</tr>
-	<tr>
-		<td width="1178" valign="baseline" colspan="3" bgcolor="#C0C0C0">
-		<font face="Georgia" size="2"><b><a name="Brief biography">Brief 
-Biography</a></b>&nbsp; </font></td>
-	</tr>
-	<tr>
-		<td valign="baseline" colspan="3">
-		<p align="justify" style="line-height: 150%; margin-top: 10px">
-		<font face="Georgia" size="2">Mr. Yi-Heng Zhu received his B.S. degree in computer science from Nanjing Institute of Technology in 2015. From 2015, he acted as a Ph.D Student of School of Computer Science and Engineering in NanJing University of Science and Technology and a member of Pattern Recognition and Bioinformatics Group, led by professor Dong-Jun Yu. From 2019 to 2021, he acted as a visiting student at the University of Michigan (Ann Arbor) in U.S.A, funded by China Scholarship Council and led by professor Yang Zhang. He is interested in the following topics: </font></p>
-	</tr>
-	<tr>
-		<td valign="baseline" width="1000">
-		<font face="Georgia" size="2"></font><ul>
-			<li>
-			<p style="margin-top: 0; margin-bottom: 0">
-			<font face="Georgia" size="2">
-			Protein Function (Gene Ontology) Prediction</font></li>
-			<li>
-			<p style="margin-top: 0; margin-bottom: 0">
-			<font face="Georgia" size="2">Protein-Ligand Binding Sites Prediction</font></li>
-			<li>
-			<p style="margin-top: 0; margin-bottom: 0">
-			<font face="Georgia" size="2">Protein Crystallization Prediction</font></li>
-			<li>
-			<p style="margin-top: 0; margin-bottom: 0">
-			<font face="Georgia" size="2">
-			Protein-Protein Interaction Network </font></li>
-			<li>
-			<p style="margin-top: 0; margin-bottom: 0">
-			<font face="Georgia" size="2">
-			Deep Learning in Bioinformatics </font></li>
-		</ul></td>
-	</tr>
-
-	<tr>
-		<td width="1178" valign="baseline" colspan="3" bgcolor="#C0C0C0">
-			<p><b>
-			<font face="Georgia" size="3">
-				<a name="Published Papers">Published Papers</a>
-			</font>
-			</b></p>
-		</td>
-	</tr>
-	<tr>
-		<td width="1178" valign="baseline" colspan="3"><br/><font face="Georgia" size="2"><b><i>Journal Papers</i></b></font></td>
-	</tr>
-	<tr>
-		<td width="1178" valign="baseline" colspan="3">
-		<ul>
-			<li>
-			<p style="line-height: 20px; margin-top: 10px" align="justify">
-			<font face="Georgia" size="2"><b>Yi-Heng Zhu</b>, Jun Hu, Fang Ge, Fuyi Li, Jiangning Song*, Yang Zhang*, Dong-Jun Yu*.
-			 <u>Accurate Multi-Stage Prediction of Protein Crystallization Propensity Using Deep-Cascade Forest with Sequence-Based Features</u>.<b> Briefings in Bioinformatics</b>. 2020, In Press.
-			 [<a href="http://202.119.84.36:3079/dcfcrystal/" target=_blank>Web Server</a>]</font>
-			 </font></li>
-			 <li>
-			<p style="line-height: 20px; margin-top: 10px" align="justify">
-			<font face="Georgia" size="2"><b>Yi-Heng Zhu</b>, Jun Hu, Xiao-Ning Song, Dong-Jun Yu.
-			 <u>DNAPred: Accurate Identification of DNA-binding Sites from Protein Sequence by Ensembled Hyperplane-Distance-Based Support Vector Machines</u>.<b> Journal of Chemical Information and Modeling</b>. 2019, 59:3057-3071. 
-			 [<a href="./PDF/DNAPred.pdf">PDF</a>]
-			 [Download Citation with <a href="./Endnote/DNAPred.enw" download="./Endnote/DNAPred.enw">Endnote</a> or 
-			 <a href="./BibTex/DNAPred.txt" download="./BibTex/DNAPred.txt">BibTex</a> Format]
-			 [<a href="https://pubs.acs.org/doi/abs/10.1021/acs.jcim.8b00749" target=_blank>DOI</a>:10.1021/acs.jcim.8b00749]
-			 [<a href="http://202.119.84.36:3079/dnapred/" target=_blank>Web Server</a>]</font>
-			 </font></li>
-			 <li>
-			<p style="line-height: 20px; margin-top: 10px" align="justify">
-			<font face="Georgia" size="2"><b>Yi-Heng Zhu</b>, Jun Hu, Yong Qi, Xiao-Ning Song, Dong-Jun Yu.
-			 <u>Boosting Granular Support Vector Machines for the Accurate Prediction of Protein-Nucleotide Binding Sites.</u>. <b>Combinatorial Chemistry & High Throughput Screening</b>. 2019:1-1. 
-			 [<a href="./PDF/BGSVM-NUC.pdf">PDF</a>]
-			 [Download Citation with <a href="./Endnote/BGSVM-NUC.enw" download="./Endnote/BGSVM-NUC.enw">Endnote</a> or 
-			 <a href="./BibTex/BGSVM-NUC.txt" download="./BibTex/BGSVM-NUC.txt">BibTex</a> Format]
-			 [<a href="https://europepmc.org/abstract/med/31553288" target=_blank>DOI</a>:10.2174/1386207322666190925125524]
-			 [<a href="http://202.119.84.36:3079/BGSVM-NUC/" target=_blank>Web Server</a>]</font>
-			 </font></li>
-			<li>
-			<p style="line-height: 20px; margin-top: 10px" align="justify">
-			<font face="Georgia" size="2">Ming-Cai Chen, Yang Li, <b>Yi-Heng Zhu</b>, Fang Ge, Dong-Jun Yu*.
-			 <u>SSCpred: Single-Sequence-Based Protein Contact Prediction Using Deep Fully Convolutional Network</u>.<b> Journal of Chemical Information and Modeling</b>. 2020, In Press.
-			 [<a href="http://202.119.84.36:3079/sscpred/" target=_blank>Web Server</a>]</font>
-			 </font></li>
-			<li>
-			<p style="line-height: 20px; margin-top: 10px" align="justify">
-			<font face="Georgia" size="2">Jun Hu, Xiao-Gen Zhou, <b>Yi-Heng Zhu</b>, Dong-Jun Yu, Guijun Zhang.
-			 <u>TargetDBP: Accurate DNA-Binding Protein Prediction via Sequence-based Multi-View Feature Learning</u>.<b> IEEE/ACM Transactions on Computational Biology and Bioinformatics</b>. 2019:1-1. 
-			 [<a href="./PDF/TargetDBP.pdf">PDF</a>]
-			 [Download Citation with <a href="./Endnote/TargetDBP.enw" download="./Endnote/TargetDBP.enw">Endnote</a> or 
-			 <a href="./BibTex/TargetDBP.txt" download="./BibTex/TargetDBP.txt">BibTex</a> Format]
-			 [<a href="https://doi.org/10.1109/TCBB.2019.2893634" target=_blank>DOI</a>:10.1109/TCBB.2019.2893634]
-			 [<a href="http://202.119.84.36:3079/targetdbp/" target=_blank>Web Server</a>]</font>
-			 </font></li>
-			 <li>
-			 <p style="line-height: 20px; margin-top: 10px" align="justify">
-			<font face="Georgia" size="2">Dong-Jun Yu, <b>Yi-Heng Zhu</b>, Jun Hu.
-			 <u>An Overview of Biocomputing Methods of Targeting Protein-Ligand Binding Residues</u>.<b> Journal of Data Acquisition and Processing</b>. 2018, 33(2):195-206. 
-			 [<a href="./PDF/Overview.pdf">PDF</a>]
-			 [Download Citation with <a href="./Endnote/Overview.enw" download="./Endnote/Overview.enw">Endnote</a> or 
-			 <a href="./BibTex/Overview.txt" download="./BibTex/Overview.txt">BibTex</a> Format]
-			 [<a href="http://sjcj.nuaa.edu.cn/html/2018/2/20180201.htm" target=_blank>DOI</a>:10.16337/j.1004-9037.2018.02.001]
-			 </font></li>
-		</ul>
-		</td>
-	</tr>	
-	<tr>
-		<td width="1178" valign="baseline" colspan="3"><br/><font face="Georgia" size="2"><b><i>Conference Papers</i></b></font></td>
-	</tr>
-	<tr>
-		<td width="1178" valign="baseline" colspan="3">
-		<ul>
-			
-			<li>
-			<p style="line-height: 150%; margin-top: 10px" align="justify">
-		<font face="Georgia" size="2">Xiao-Rong Bao, <b>Yi-Heng Zhu</b>, and Dong-Jun Yu*. <u>DeepTF: Accurate Prediction of Transcription Factor Binding Sites from DNA Sequence by Combining Multi-Scale Convolutional Neural Network and Long Short-Term Memory Neural Network</u>. <b>International Conference on Intelligence Science and Big Data Engineering (IScIDE 2019)</b>.
-			 [<a href="./PDF/DeepTF.pdf">PDF</a>]
-			 [Download Citation with <a href="./Endnote/DeepTF.enw" download="./Endnote/DeepTF.enw">Endnote</a> or 
-			 <a href="./BibTex/DeepTF.txt" download="./BibTex/DeepTF.txt">BibTex</a> Format]
-			 [<a href="https://link.springer.com/chapter/10.1007%2F978-3-030-36204-1_10" target=_blank>DOI</a>:10.1007/978-3-030-36204-1_10]
-						</font></li>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<title>I Love You Forever</title>
+		<meta name="author" content="Mike">
 		
-		</ul>
-		<p><font face="Georgia" size="2">[<a href="#Yiheng_Zhu">Back</a>]</font>
-		</td>
-	</tr>
-	</table>
-</div>
+		<link rel="stylesheet" href="./jscss/style.css" type="text/css" media="all">
+		<!--导库-->
+		<script type="text/javascript" src="./jscss/jquery.js"></script>
+		<!-- 图片幻灯片效果-->
+		<script type="text/javascript" src="./jscss/roundabout.js"></script>
+		<script type="text/javascript" src="./jscss/roundabout_shapes.js"></script>
+		<script type="text/javascript" src="./jscss/gallery_init.js"></script>
+		<!-- 下雪-->
+		<script type="text/javascript" src="./jscss/snowstorm.js"></script>
+		<!-- 打字机效果-->		
+		<script type="text/javascript" src="./jscss/text.js"></script>
+		<!-- 画爱心-->
+		<script type="text/javascript" src="./jscss/ga.js" async=""></script>
+		<script type="text/javascript" src="./jscss/heart.js"></script>
+		<!-- 移动div-->
+		<script type="text/javascript" src="./jscss/move.js"></script>
+		<!-- 显示时间 -->
+		<script type="text/javascript" src="./jscss/time.js"></script>
+		<!-- 设置文字跟随鼠标 -->
+		<script type="text/javascript" src="./jscss/makesnake.js"></script></head><body>
+		<!-- thanks for watching! -->
+		<span id="span0" class="spanstyle">T</span><span id="span1" class="spanstyle">h</span>
+		<span id="span2" class="spanstyle">a</span><span id="span3" class="spanstyle">n</span>
+		<span id="span4" class="spanstyle">k</span><span id="span5" class="spanstyle">s</span><span id="span6" class="spanstyle">
+		 </span><span id="span7" class="spanstyle">f</span><span id="span8" class="spanstyle">o</span><span id="span9" class="spanstyle">r</span>
+		 <span id="span10" class="spanstyle"> </span><span id="span11" class="spanstyle">w</span>
+		 <span id="span12" class="spanstyle">a</span><span id="span13" class="spanstyle">t</span><span id="span14" class="spanstyle">c</span><span id="span15" class="spanstyle">h</span>
+		 <span id="span16" class="spanstyle">i</span><span id="span17" class="spanstyle">n</span><span id="span18" class="spanstyle">g</span><span id="span19" class="spanstyle">!</span>
+	
+
+	
+		<script type="text/javascript">
+			setTimeout(makesnake, 42000);
+		</script>
+		<!--#Header-->
+		<div id="header" style="opacity:0.85">
+			<div id="title">
+				Thank you appeared in my life.
+			</div>
+		</div>
+
+		<!-- #myContent -->
+		<div id="myContent">
+				<span id="blink" style="display: none;">_</span></div>
+		<div id="contentToWrite" style="display:none">
+			  亲爱的小羽, 谢谢你出现在我的生命里。 <br>
+			  因为你的出现, 让我沉寂的心再次掀起波澜。 <br>
+				初次见你时，我就被你那可爱的外表，开朗的性格,<br>
+				，以及精湛的王者实力所吸引。<br>
+				当然，最吸引我的，还是你独特的都市丽人的气质。<br>
+				让我坚信，你就是我要找的那个人。<br>
+				虽然我们认识的时间不长，         <br>
+				但是和你在一起的每一天，我都非常的开心<br>
+				喜欢和你彻夜聊天，喜欢和你打王者荣耀。 <br>
+				喜欢和你互相皮，叫你小沙雕。         <br>
+			  喜欢和你一起压马路,喜欢和你分享美食。<br>
+			  喜欢和你在一起的点点滴滴。<br>
+			  喜欢和你在一起续写专属你我的故事。<br>
+				不管前面的路如何崎岖，<br>
+				不管经历过什么,我仍坚信最浪漫的事就是陪在你身边，<br>
+				继续喜欢你，照顾你。<br>
+				相信右下角的计时器,将永远继续下去,直至数据溢出.<br>
+				<br>
+				The way may be tougher than I have ever imaged, however,<br>
+				I will enjoy the happiness in the process of pursuing your smile.<br>
+				-----------------------Just for You, Xiaoyu<br>
+		</div>
+		<script type="text/javascript">
+			writeContent(true);
+		</script>
+		
+
+		<!-- #container -->
+		<div id="container">
+			<ul id="myRoundabout" class="roundabout-holder" style="padding: 0px; position: relative; z-index: 100;">
+		  	<li class="roundabout-moveable-item roundabout-in-focus" current-scale="1.0000" style="position: absolute; left: 122px; top: 87px; width: 277.445px; height: 175.9794px; opacity: 1; z-index: 400; font-size: 16px;"><img src="./jscss/1.jpg" alt=""></li>
+			<li class="roundabout-moveable-item" current-scale="0.7927" style="position: absolute; left: -0.4px; top: 110px; width: 277.445px; height: 175.9794px; opacity: 1; z-index: 296; font-size: 12.68px;"><img src="./jscss/2.jpg" alt=""></li>
+			<li class="roundabout-moveable-item" current-scale="0.4573" style="position: absolute; left: 473.8px; top: 147.2px; width: 277.445px; height: 175.9794px; opacity: 1; z-index: 129; font-size: 7.32px;"><img src="./jscss/3.jpg" alt=""></li>
+			<li class="roundabout-moveable-item" current-scale="0.4573" style="position: absolute; left: -39.8px; top: 147.2px; width: 277.445px; height: 277.445px; opacity: 1; z-index: 129; font-size: 7.32px;"><img src="./jscss/4.jpg" alt=""></li>
+			<li class="roundabout-moveable-item" current-scale="0.7927" style="position: absolute; left: 317px; top: 110px; width: 277.445px; height: 175.9794px; opacity: 1; z-index: 296; font-size: 12.68px;"><img src="./jscss/5.jpg" alt=""></li>
+			<li class="roundabout-moveable-item" current-scale="0.7927" style="position: absolute; left: 317px; top: 110px; width: 277.445px; height: 175.9794px; opacity: 1; z-index: 296; font-size: 12.68px;"><img src="./jscss/6.jpg" alt=""></li>
+			<li class="roundabout-moveable-item" current-scale="0.7927" style="position: absolute; left: 317px; top: 110px; width: 277.445px; height: 175.9794px; opacity: 1; z-index: 296; font-size: 12.68px;"><img src="./jscss/7.jpg" alt=""></li>
+		  </ul>
+		</div>
+		<script type="text/javascript">
+			setTimeout(move, 15000);
+		</script>
+  		
+  		<!-- #bg -->
+		<div id="bg">
+			<canvas id="garden" width="1583" height="709"><c style="color: #FFF; text-shadow:2px 3px 3px #222; font-family:Microsoft YaHei; font-size:50px">你的浏览器过时了,试试火狐吧!</c></canvas>
+		</div>
+
+		<!-- #time -->
+		<div id="time">
+			<span id="show"></span>
+			<script type="text/javascript">
+				setTimeout("showTime()", 40000);
+			</script>
+		</div>
+
+	
+	
 
 </body>
-</html> 
